// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceProviderNameComponent should match the snapshot for a desktop viewport 1`] = `
<div>
  <section
    class="fr-px-2w text-center"
    data-testid="wrapper"
  >
    <h1
      class="fr-h4 fr-mb-2w"
      data-testid="title"
    >
      Je choisis un compte pour me connecter sur
    </h1>
    <h2
      class="fr-h1 fr-mb-8w"
      data-testid="subtitle"
    >
      <span />
    </h2>
  </section>
</div>
`;

exports[`ServiceProviderNameComponent should match the snapshot for a tablet viewport 1`] = `
<div>
  <section
    class="fr-px-2w"
    data-testid="wrapper"
  >
    <h1
      class="fr-h4 fr-mb-2w"
      data-testid="title"
    >
      Je choisis un compte pour me connecter sur
    </h1>
    <h2
      class="fr-h1 fr-mb-5w"
      data-testid="subtitle"
    >
      <span />
    </h2>
  </section>
</div>
`;
